Ajustes bucle infinito en gastoMaterial